@@ -30,6 +30,7 @@ val document_ocaml_interf : string -> string -> Rule.action
 val document_ocaml_implem : string -> string -> Rule.action
 val document_ocaml_project :
   ?ocamldoc:(Tags.t -> string list -> string -> string -> Command.t) ->
+  ?tags:(string list) ->
   string -> string -> string -> Rule.action
 
 val camlp4 : ?default:Command.spec -> Tags.elt -> Pathname.t -> Pathname.t -> Rule.action
